--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
 body {
-    background-color: rgba (47, 49, 56, 1.0);
+    background-color: rgba(47, 49, 56, 1.0);
+    color: rgba(215,216,220,1.0);
 }
