--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,7 @@
+
+
 body {
     background-color: rgba(47, 49, 56, 1.0);
     color: rgba(215,216,220,1.0);
+    font-family: Archivo, Calibri, sans-serif;
 }
