--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,54 @@
 body {
-    background-color: rgba(47, 49, 56, 1.0);
+    background-color: rgba(40, 41, 48, 1.0);
     color: rgba(215,216,220,1.0);
-    font-family: Archivo, Calibri, sans-serif;
+    font-family: Sarabun, Calibri, sans-serif;
     text-align: center;
-    font-size: 50px;
 }
-.vertical {
-    border-left: 5px solid rgba(161, 213, 238 ,1.0);
+.top-text{
+  font-size: 40px;
+  margin-top:40px;
+}
+
+.lowell{
+    margin-left:100px;
+    text-align:left;
+}
+.icons{
+    margin-right:300px;
+    margin-top:-54px;
+    text-align:right;
+}
+
+#big-header{
+  font-size: 120px;
+  text-shadow: 0px 0px 10px black;
+}
+.vertical-divider {
+    border-left: 2px solid rgba(161, 213, 238 ,1.0);
     height: 500px;
-    position: fixed;
+    position: absolute;
     left:70%;
+}
+.date-divider {
+    border-left: 2px solid rgba(215,216,220,1.0);
+    height: 70px;
+    position: absolute;
+    margin-top: -55px;
+    left:85%;
+}
+.box{
+  width: 400px;
+  border: 2px solid rgba(161, 213, 238 ,1.0);
+  padding: 50px;
+  margin: 40px;
+  font-size:25px;
+  text-align:left;
+}
+.agenda{
+  font-size: 50px;
+  text-align:center;
+/*  text-decoration: underline;
+  text-underline-offset:5px;
+  text-decoration-thickness:2px; */
+  font-weight:bold;
 }
