--- a/styles.css
+++ b/styles.css
@@ -1,55 +1,78 @@
 body {
-    background-color: rgba(40, 41, 48, 1.0);
-    color: rgba(215,216,220,1.0);
-    font-family: Sarabun, Calibri, sans-serif;
-    text-align: center;
+  background-color: rgba(40, 41, 48, 1.0);
+  color: rgba(215,216,220,1.0);
+  font-family: Sarabun, Calibri, sans-serif;
+  text-align: center;
 }
 .top-text{
-    font-size: 30px;
-    margin-top:20px;
-    display: inline-block;
-    
+  font-size: 30px;
+  margin-top:30px;
+  display: inline-block;
 }
-  
+
 .lowell{
-      margin-left:30px;
-      text-align:left;
-      width: 1150px;
+    margin-left:50px;
+    text-align:left;
+    width: 1150px;
 }
-  .icons{
-      margin-right:200px;
-      text-align:right;
+.icons{
+    margin-right:300px;
+    text-align:right;
 }
 #big-header{
-  font-size: 120px;
-  text-shadow: 0px 0px 10px black;
+font-size: 120px;
+text-shadow: 0px 0px 10px black;
 }
 .vertical-divider {
-    border-left: 2px solid rgba(161, 213, 238 ,1.0);
-    height: 500px;
-    position: absolute;
-    left:70%;
+  border-left: 2px solid rgba(161, 213, 238 ,1.0);
+  height: 500px;
+  position: absolute;
+  left:70%;
 }
-.date-divider {
-    border-left: 1px solid rgba(215,216,220,1.0);
-    height: 70px;
-    position: absolute;
-    left:85%;
-    margin-top: -45px;
+#date-divider {
+  border-left: 1px solid rgba(215,216,220,1.0);
+  height: 60px;
+  position: relative;
+  left:80%;
+  margin-top: -52px;
 }
 .box{
-  width: 400px;
-  border: 2px solid rgba(161, 213, 238 ,1.0);
-  padding: 50px;
-  margin: 40px;
-  font-size:25px;
-  text-align:left;
+width: 400px;
+border: 2px solid rgba(161, 213, 238 ,1.0);
+padding: 50px;
+margin: 40px;
+font-size:25px;
+text-align:left;
+float: left;
 }
 .agenda{
-  font-size: 50px;
-  text-align:center;
+font-size: 50px;
+text-align:center;
 /*  text-decoration: underline;
-  text-underline-offset:5px;
-  text-decoration-thickness:2px; */
-  font-weight:bold;
+text-underline-offset:5px;
+text-decoration-thickness:2px; */
+font-weight:bold;
+}
+.three{
+}
+.subheadings{
+ font-size: 70px;
+ font-weight:bold;
+ display:inline-block;
+margin-left:100px;
+
+}
+a{
+color:rgba(98,117,171,1.0);
+text-decoration: none;
+}
+a:hover{
+
+text-decoration: underline;
+}
+.links{
+font-size:30px;
+text-align:left;
+float:right;
+margin-right: 170px;
 }
