--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ body {
 #big-header{
 font-size: 120px;
 text-shadow: 0px 0px 10px black;
+margin-top:50px;
 }
 .vertical-divider {
   border-left: 2px solid rgba(161, 213, 238 ,1.0);
@@ -54,6 +55,7 @@ text-decoration-thickness:2px; */
 font-weight:bold;
 }
 .three{
+margin-top:-30px;
 }
 .subheadings{
  font-size: 70px;
