--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body {
   color: rgba(215,216,220,1.0);
   font-family: Sarabun, Calibri, sans-serif;
   text-align: center;
+  overflow: hidden;
 }
 .top-text{
   font-size: 30px;
