--- a/styles.css
+++ b/styles.css
@@ -1,95 +1,198 @@
+:root {
+  --bg-color: rgba(40, 41, 48, 1.0);
+  --txt-color:rgba(215,216,220,1.0);
+  --accent-color:rgba(161, 213, 238 ,1.0);
+  --link-color:rgba(98,117,171,1.0)
+  --active: 2;
+  --inactive: 0;
+}
 body {
-  background-color: rgba(40, 41, 48, 1.0);
-  color: rgba(215,216,220,1.0);
-  font-family: Sarabun, Calibri, sans-serif;
-  text-align: center;
+    background-color: var(--bg-color);
+    color: var(--txt-color);
+    font-family: Sarabun, Calibri, sans-serif;
+    text-align: center;
+    overflow-x: hidden;
 }
 .top-text{
-  font-size: 30px;
-  margin-top:30px;
-  display: inline-block;
+    font-size: 30px;
+    margin-top:30px;
+    display: inline-block;
 }
-
+  
 .lowell{
-    margin-left:50px;
-    text-align:left;
-    width: 1150px;
+      margin-left:-200px;
+      text-align:left;
+      width: 900px;
 }
-.icons{
-    margin-right:300px;
-    text-align:right;
+ .right-stuff{
+      margin-right:300px;
+      text-align:right;
 }
 #big-header{
-font-size: 120px;
-text-shadow: 0px 0px 10px black;
-margin-top:50px;
+  font-size: 100px;
+  text-shadow: 0px 0px 10px black;
+  margin-top:40px;
 }
 .vertical-divider {
-  border-left: 2px solid rgba(161, 213, 238 ,1.0);
-  height: 500px;
-  position: absolute;
-  left:70%;
+    border-left: 2px solid var(--accent-color);
+    height: 500px;
+    position: absolute;
+    left:70%;
 }
 #date-divider {
-  border-left: 1px solid rgba(215,216,220,1.0);
-  height: 60px;
-  position: relative;
-  left:80%;
-  margin-top: -52px;
+    border-left: 1px solid var(--txt-color);
+    height: 60px;
+    position: relative;
+    left:67%;
+    margin-top: -52px;
 }
 .box{
-width: 400px;
-border: 2px solid rgba(161, 213, 238 ,1.0);
-padding: 50px;
-margin: 40px;
-font-size:25px;
-text-align:left;
-float: left;
+  width: 400px;
+  border: 2px solid var(--accent-color);
+  padding: 50px;
+  margin: 40px;
+  font-size:25px;
+  text-align:left;
+  float: left;
 }
 .agenda{
-font-size: 50px;
-text-align:center;
-/*  text-decoration: underline;
-text-underline-offset:5px;
-text-decoration-thickness:2px; */
-font-weight:bold;
+  font-size: 50px;
+  text-align:center;
+/* text-decoration: underline;
+  text-underline-offset:5px;
+  text-decoration-thickness:2px; */
+  font-weight:bold;
 }
 .three{
-margin-top:-30px;
+  margin-top:-30px;
 }
 .subheadings{
- font-size: 70px;
- font-weight:bold;
- display:inline-block;
-margin-left:100px;
-
+   font-size: 50px;
+   font-weight:bold;
+   display:inline-block;
+  margin-left:100px;
+  
 }
 a{
-color:rgba(98,117,171,1.0);
-text-decoration: none;
+  color:var(--link-color);
+  text-decoration: none;
 }
 a:hover{
 
-text-decoration: underline;
+  text-decoration: underline;
 }
 .links{
-font-size:30px;
-text-align:left;
-float:right;
-margin-right: 170px;
+  font-size:30px;
+  text-align:left;
+  float:right;
+  margin-right: 170px;
 }
 #light-mode{ 
-position:absolute;
-margin-top:30px;
-margin-left:-200px;
+  position:absolute;
+  margin-top:62px;
+  margin-left:-57px;
+  width:35px;
+  filter:invert(0.9);
+  z-index: var(--inactive);
 }
 #dark-mode{ 
-position:absolute;
-margin-top:30px;
-margin-left:-100px;
+  position:absolute;
+  margin-top:67px;
+  margin-left:20px;
+  filter:invert(0.9);
+  width:25px;
+  /*z-index: var(--active);*/
+  z-index: 2;
 }
 #menu{
-position:absolute;
-margin-top:23px;
+  position:absolute;
+  margin-top:50px;
+  margin-left:100px;
+  filter:invert(0.9);
+  width:60px;
 
+}
+.icons{
+  float:right;
+  margin-right:200px;
+  margin-top: -30px;
+
+}
+#mode-box{
+  width: 80px;
+  padding: 30px;
+  float: right;
+  position:absolute;
+  left:1580px;
+  top:28px;
+  border-radius:20px;
+  z-index:1;
+  background:rgba(0,0,0,0.4);
+}
+#mode-selector{
+  width: 10px;
+  border: 1px solid var(--accent-color);
+  padding: 30px;
+  float: right;
+  position:absolute;
+  left:1650px;
+  top:28px;
+  border-radius:20px;
+  z-index:1;
+  background:rgba(0,0,0,0.4);
+
+}
+#lowell-logo{
+  position:absolute;
+  width:80px;
+  left:50px;
+  top:20px;
+}
+#gc-logo{
+  position:absolute;
+  width:60px;
+  top:30px;
+  left:1300px;
+}
+#processing-logo{
+  position:absolute;
+  width:60px;
+  top:30px;
+  left:1390px;
+}
+#github-logo{
+  position:absolute;
+  width:60px;
+  top:30px;
+  left:1480px;
+}
+.blank-icons{
+  position:absolute;
+}
+#box1{
+  width: 0px;
+  padding: 30px;
+  float: right;
+  position:absolute;
+  left:1292px;
+  top:-48px;
+  z-index:0;
+}
+#box2{
+  width: 0px;
+  padding: 30px;
+  float: right;
+  position:absolute;
+  left:1382px;
+  top:-48px;
+  z-index:1;
+}
+#box3{
+  width: 0px;
+  padding: 30px;
+  float: right;
+  position:absolute;
+  left:1472px;
+  top:-48px;
+  z-index:1;
 }
